aws-eks-cicd-pipeline/aws-eks-cicd-pipeline/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production
    environment: prod
