aws-eks-cicd-pipeline/aws-eks-cicd-pipeline/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-cicd-demo-service
  namespace: production
  labels:
    app: eks-cicd-demo
spec:
  type: LoadBalancer
  selector:
    app: eks-cicd-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
